Fix tabs spacing

--- a/themes/wynn/sass/paint/_tabs.sass
+++ b/themes/wynn/sass/paint/_tabs.sass
@@ -6,8 +6,6 @@
     dd
       float: right
       margin: 0 20px
-      &:first-child
-        margin-left: 0
       a
         background: none
         border: none
